tests/snapshots/regression-projection-all_of_it.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Rupture
ship/capacitorStablePercentage               = 87.588989
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 6.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 18.000000
ship/passiveShieldEffectiveRechargeRate      = 21.543514
ship/passiveShieldRechargeRate               = 13.666667
ship/velocityBoost                           = 147.165698
ship/ehp                                     = 16664.565015
ship/shieldThermalDamageEffectiveResonance   = 0.175000
ship/shieldKineticDamageEffectiveResonance   = 0.131250
ship/shieldExplosiveDamageEffectiveResonance = 0.109375
ship/shieldEmDamageEffectiveResonance        = 0.218750
ship/hullThermalDamageEffectiveResonance     = 0.100500
ship/hullKineticDamageEffectiveResonance     = 0.100500
ship/hullExplosiveDamageEffectiveResonance   = 0.100500
ship/hullEmDamageEffectiveResonance          = 0.100500
ship/armorThermalDamageEffectiveResonance    = 0.138125
ship/armorKineticDamageEffectiveResonance    = 0.159375
ship/armorExplosiveDamageEffectiveResonance  = 0.191250
ship/armorEmDamageEffectiveResonance         = 0.085000
ship/shieldEhp                               = 8078.817634
ship/hullEhp                                 = 4664.178803
ship/armorEhp                                = 3921.568578
ship/shieldDamageEffectiveResonance          = 0.634375
ship/hullDamageEffectiveResonance            = 0.402000
ship/armorDamageEffectiveResonance           = 0.573750
ship/damagePerSecondWithReload               = 101.794412
ship/damagePerSecondWithoutReload            = 104.420056
ship/damageAlpha                             = 525.890088
ship/powerFree                               = 664.900000
ship/cpuFree                                 = 247.500000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 76.000000
ship/capacitorPeakDelta                      = 9.500000
ship/capacitorPeakLoad                       = 3.000000
ship/capacitorPeakRecharge                   = 12.500000
ship/alignTime                               = 8.047439
ship/mass                                    = 17200000.000000
ship/hp                                      = 1875.000000
ship/powerOutput                             = 1075.000000
ship/powerLoad                               = 410.100000
ship/maxVelocity                             = 259.523982
ship/cpuOutput                               = 437.500000
ship/cpuLoad                                 = 190.000000
ship/rechargeRate                            = 318750.000000
ship/agility                                 = 0.337500
ship/maxTargetRange                          = 46064.452920
ship/scanSpeed                               = 3375.000000
ship/kineticDamageResonance                  = 0.402000
ship/thermalDamageResonance                  = 0.402000
ship/explosiveDamageResonance                = 0.402000
ship/emDamageResonance                       = 0.402000
ship/warpCapacitorNeed                       = 0.000000
ship/scanLadarStrength                       = 18.000000
ship/shieldCapacity                          = 5125.000000
ship/armorHP                                 = 2250.000000
ship/armorEmDamageResonance                  = 0.340000
ship/armorExplosiveDamageResonance           = 0.765000
ship/armorKineticDamageResonance             = 0.637500
ship/armorThermalDamageResonance             = 0.552500
ship/shieldEmDamageResonance                 = 0.875000
ship/shieldExplosiveDamageResonance          = 0.437500
ship/shieldKineticDamageResonance            = 0.525000
ship/shieldThermalDamageResonance            = 0.700000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 937500.000000
ship/capacitorCapacity                       = 1593.750000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMC                             = 50.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/signatureRadius                         = 206.250000
ship/scanResolution                          = 267.173827
ship/shipBonusMC2                            = 37.500000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

incoming_effect_1/type                 = Stasis Webifier II
incoming_effect_1/effect               = remoteWebifierFalloff
incoming_effect_1/speedFactor          = -60.000000
incoming_effect_1/maxRange             = 10000.000000
incoming_effect_1/falloffEffectiveness = 0.000000
incoming_effect_1/remoteResistanceID   = 2115.000000
incoming_effect_2/type                 = Target Painter II
incoming_effect_2/effect               = remoteTargetPaintFalloff
incoming_effect_2/maxRange             = 54000.000000
incoming_effect_2/signatureRadiusBonus = 37.500000
incoming_effect_2/falloffEffectiveness = 135000.000000
incoming_effect_2/remoteResistanceID   = 2114.000000
incoming_effect_3/type                 = Remote Sensor Dampener II
incoming_effect_3/effect               = remoteSensorDampFalloff
incoming_effect_3/maxRange             = 61875.000000
incoming_effect_3/maxTargetRangeBonus  = -26.296875
incoming_effect_3/scanResolutionBonus  = -26.296875
incoming_effect_3/falloffEffectiveness = 123750.000000
incoming_effect_3/remoteResistanceID   = 2112.000000
incoming_effect_4/type                 = Tracking Disruptor II
incoming_effect_4/effect               = shipModuleTrackingDisruptor
incoming_effect_4/maxRange             = 72000.000000
incoming_effect_4/falloffBonus         = -21.487501
incoming_effect_4/maxRangeBonus        = -21.487501
incoming_effect_4/trackingSpeedBonus   = -21.487501
incoming_effect_4/falloffEffectiveness = 36000.000000
incoming_effect_5/type                 = Guidance Disruptor II
incoming_effect_5/effect               = shipModuleGuidanceDisruptor
incoming_effect_5/maxRange             = 72000.000000
incoming_effect_5/missileVelocityBonus = -11.250000
incoming_effect_5/explosionDelayBonus  = -11.250000
incoming_effect_5/aoeVelocityBonus     = -15.000000
incoming_effect_5/aoeCloudSizeBonus    = 15.000000
incoming_effect_5/falloffEffectiveness = 36000.000000

high_1/type                         = 425mm AutoCannon II
high_1/state                        = active
high_1/damageVolley                 = 249.515088
high_1/speedWithReload              = 3599.179660
high_1/speedOfReload                = 83.333335
high_1/damagePerSecondWithReload    = 69.325544
high_1/damagePerSecondWithoutReload = 70.968713
high_1/chargeAmount                 = 119.999998
high_1/cycleTime                    = 3515.846325
high_1/power                        = 138.600000
high_1/cpu                          = 18.750000
high_1/speed                        = 3515.846325
high_1/maxRange                     = 1177.687490
high_1/damageMultiplier             = 9.040402
high_1/falloff                      = 10634.518035
high_1/trackingSpeed                = 45.600059
high_1/barrageDmgMultiplier         = 9.040402
high_1/barrageFalloff               = 10634.518035
high_1/entityFlyRange               = 250.000000
high_1/heatDamage                   = 0.600000
high_1/charge/type                  = Republic Fleet EMP M

high_2/type                         = Heavy Missile Launcher II
high_2/state                        = active
high_2/damageVolley                 = 276.375000
high_2/speedWithReload              = 8511.999984
high_2/speedOfReload                = 249.999984
high_2/damagePerSecondWithReload    = 32.468868
high_2/damagePerSecondWithoutReload = 33.451344
high_2/chargeAmount                 = 40.000002
high_2/power                        = 94.500000
high_2/cpu                          = 41.250000
high_2/speed                        = 8262.000000
high_2/heatDamage                   = 1.350000
high_2/charge/type                  = Scourge Fury Heavy Missile
high_2/charge/maxVelocity           = 5724.375000
high_2/charge/kineticDamage         = 276.375000
high_2/charge/explosionDelay        = 6489.843750
high_2/charge/aoeVelocity           = 90.525000
high_2/charge/aoeCloudSize          = 207.862500

medium_1/type              = 10MN Afterburner II
medium_1/state             = active
medium_1/capacitorPeakLoad = 3.000000
medium_1/cycleTime         = 7500.000000
medium_1/capacitorNeed     = 22.500000
medium_1/speedFactor       = 168.750000
medium_1/duration          = 7500.000000
medium_1/heatDamage        = 4.275000

medium_2/type  = Large Shield Extender II
medium_2/state = online
medium_2/power = 120.000000

low_1/type  = Damage Control II
low_1/state = online

low_2/type  = Gyrostabilizer II
low_2/state = online
