tests/snapshots/regression-projection-bastion_alone.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Paladin
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 10.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 50.400000
ship/passiveShieldEffectiveRechargeRate      = 26.781057
ship/passiveShieldRechargeRate               = 12.654049
ship/ehp                                     = 67031.002113
ship/shieldThermalDamageEffectiveResonance   = 0.140000
ship/shieldKineticDamageEffectiveResonance   = 0.091875
ship/shieldExplosiveDamageEffectiveResonance = 0.065625
ship/shieldEmDamageEffectiveResonance        = 0.175000
ship/hullThermalDamageEffectiveResonance     = 0.117250
ship/hullKineticDamageEffectiveResonance     = 0.117250
ship/hullExplosiveDamageEffectiveResonance   = 0.117250
ship/hullEmDamageEffectiveResonance          = 0.117250
ship/armorThermalDamageEffectiveResonance    = 0.113750
ship/armorKineticDamageEffectiveResonance    = 0.114844
ship/armorExplosiveDamageEffectiveResonance  = 0.105000
ship/armorEmDamageEffectiveResonance         = 0.087500
ship/shieldEhp                               = 18253.968645
ship/hullEhp                                 = 22654.584043
ship/armorEhp                                = 26122.449424
ship/shieldDamageEffectiveResonance          = 0.472500
ship/hullDamageEffectiveResonance            = 0.469000
ship/armorDamageEffectiveResonance           = 0.421094
ship/powerFree                               = 19900.000000
ship/cpuFree                                 = 655.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 31.250000
ship/capacitorPeakRecharge                   = 31.250000
ship/alignTime                               = 10.276766
ship/hp                                      = 10625.000000
ship/powerOutput                             = 20000.000000
ship/powerLoad                               = 100.000000
ship/maxVelocity                             = 0.000000
ship/cpuOutput                               = 662.500000
ship/cpuLoad                                 = 7.500000
ship/rechargeRate                            = 750000.000000
ship/agility                                 = 0.057915
ship/maxTargetRange                          = 147875.000000
ship/scanSpeed                               = 5625.000000
ship/warpScrambleStatus                      = 100.000000
ship/kineticDamageResonance                  = 0.469000
ship/thermalDamageResonance                  = 0.469000
ship/explosiveDamageResonance                = 0.469000
ship/emDamageResonance                       = 0.469000
ship/warpCapacitorNeed                       = 0.000000
ship/scanRadarStrength                       = 50.400000
ship/shieldCapacity                          = 8625.000000
ship/armorHP                                 = 11000.000000
ship/armorEmDamageResonance                  = 0.350000
ship/armorExplosiveDamageResonance           = 0.420000
ship/armorKineticDamageResonance             = 0.459375
ship/armorThermalDamageResonance             = 0.455000
ship/shieldEmDamageResonance                 = 0.700000
ship/shieldExplosiveDamageResonance          = 0.262500
ship/shieldKineticDamageResonance            = 0.367500
ship/shieldThermalDamageResonance            = 0.560000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 1704000.000000
ship/capacitorCapacity                       = 9375.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 200.000000
ship/shipBonusAB2                            = -50.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/eliteBonusViolators1                    = 25.000000
ship/eliteBonusViolators2                    = 37.500000
ship/remoteRepairImpedance                   = 0.000001
ship/remoteAssistanceImpedance               = 0.050000
ship/disallowTethering                       = 1.000000
ship/disallowDocking                         = 1.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000
ship/remoteCapacitorImpedance                = 0.000001

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type  = Bastion Module I
high_1/state = active
high_1/cpu   = 7.500000
